--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -114,6 +114,13 @@
 
 
 		$("form").on("submit", function(event){
+			event.preventDefault();
+			makeResults();
+			var name = $('#name').val();
+			var verbOne = $('select#verb-1').val();
+			var mission = 
+			$('.results').append('<p>').append("Once upon a time there was a Developer " + name + ". " + "'" + name + " came to General Assembly to " + verbOne);
+
 
 		    // Stop the form from submitting
 
