--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -102,7 +102,7 @@
 			results.innerHTML = '<h1>' + 'A true story:' + '</h1>';
 			results.className = 'container results';
 			main.appendChild(results);
-		};
+		}
 		/*
 		
 			Make a function that will create <section> element and append it to #main.
@@ -118,8 +118,17 @@
 			makeResults();
 			var name = $('#name').val();
 			var verbOne = $('select#verb-1').val();
-			var mission = 
-			$('.results').append('<p>').append("Once upon a time there was a Developer " + name + ". " + "'" + name + " came to General Assembly to " + verbOne);
+			var mission = $('textarea#mission').val();
+			var sentiment = null;
+			if (document.getElementById('radio1').checked) {
+				sentiment = document.getElementById('radio1').value;
+			} else if (document.getElementById('radio2').checked) {
+				sentiment = document.getElementById('radio2').value;
+			} else if (document.getElementById('radio3').checked) {
+				sentiment = document.getElementById('radio3').value;
+			}
+			
+			$('.results').append('<p>').append("Once upon a time there was a Developer " + name + ". " + "'" + name + " came to General Assembly to " + verbOne + "the great mountain of programming knowledge. " + "'" + mission + "', " + name + "shouted.' 'Though " + sentiment + ", ");
 
 
 		    // Stop the form from submitting
