--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -120,15 +120,37 @@
 			var verbOne = $('select#verb-1').val();
 			var mission = $('textarea#mission').val();
 			var sentiment = null;
-			if (document.getElementById('radio1').checked) {
-				sentiment = document.getElementById('radio1').value;
-			} else if (document.getElementById('radio2').checked) {
-				sentiment = document.getElementById('radio2').value;
-			} else if (document.getElementById('radio3').checked) {
-				sentiment = document.getElementById('radio3').value;
-			}
+				if (document.getElementById('radio1').checked) {
+					sentiment = document.getElementById('radio1').value;
+				} else if (document.getElementById('radio2').checked) {
+					sentiment = document.getElementById('radio2').value;
+				} else if (document.getElementById('radio3').checked) {
+					sentiment = document.getElementById('radio3').value;
+				}
+			var noun = $('#noun-1').val();
+			var sentimentTwo = null;
+			var checkOne = document.getElementById('check1');
+			var checkTwo = document.getElementById('check2');
+			var checkThree = document.getElementById('check3');
+
+
+				if (checkOne.checked && !checkTwo.checked && !checkThree.checked) {
+					sentimentTwo = checkOne.value;
+				} else if (checkOne.checked && checkTwo.checked && !checkThree.checked) {
+					sentimentTwo = checkOne.value + ", " + checkTwo.value;
+				} else if (checkOne.checked && checkTwo.checked && checkThree.checked) {
+					sentimentTwo = checkOne.value + ", " + checkTwo.value + " and " + checkThree.value;
+				}
+			var nounTwo = $('#noun-2').val();
+
+
+				// NEED TO ADD ALERTS WHEN NOTHING IS SELECTED IN FIELD//
+				// * NEED TO ADD CAPITALIZATION IF NOT CAPITALIZED//
+				// ** NEED TO ADD FUNCTIONALITY FOR IF ONLY CHECKTWO OR CHECK THREE ARE SELECTED//
+
+
 			
-			$('.results').append('<p>').append("Once upon a time there was a Developer " + name + ". " + "'" + name + " came to General Assembly to " + verbOne + "the great mountain of programming knowledge. " + "'" + mission + "', " + name + "shouted.' 'Though " + sentiment + ", ");
+			$('.results').append('<p>').append("Once upon a time there was a Developer named" + name.toUppercase(); + ". " + name + " came to General Assembly to " + verbOne + " the great mountain of programming knowledge. '" + mission + "', " + name + " shouted. Though " + sentiment + " " + name + " was able to overcome all obstacles with the power of their " + noun + ". In the end, their success can be contributed entirely to their " + sentimentTwo + " " + nounTwo + ".");
 
 
 		    // Stop the form from submitting
