--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>CSS HTML Forms Lab</title>
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Proza+Libre" rel="stylesheet">
 </head>
 <body>
 	<section id="main">
@@ -140,17 +141,29 @@
 					sentimentTwo = checkOne.value + ", " + checkTwo.value;
 				} else if (checkOne.checked && checkTwo.checked && checkThree.checked) {
 					sentimentTwo = checkOne.value + ", " + checkTwo.value + " and " + checkThree.value;
+				}else if (!checkOne.checked && checkTwo.checked && !checkThree.checked) {
+					sentimentTwo = checkTwo.value;
+				} else if (!checkOne.checked && !checkTwo.checked && checkThree.checked) {
+					sentimentTwo = checkThree.value;
+				} else if (checkOne.checked && !checkTwo.checked && checkThree.checked) {
+					sentimentTwo = checkOne.value + " and " + checkThree.value;
+				} else if (!checkOne.checked && checkTwo.checked && checkThree.checked) {
+					sentimentTwo = checkTwo.value + " and " + checkThree.value;
 				}
+			
+
+
+
 			var nounTwo = $('#noun-2').val();
 
 
 				// NEED TO ADD ALERTS WHEN NOTHING IS SELECTED IN FIELD//
 				// * NEED TO ADD CAPITALIZATION IF NOT CAPITALIZED//
-				// ** NEED TO ADD FUNCTIONALITY FOR IF ONLY CHECKTWO OR CHECK THREE ARE SELECTED//
+				// ** need to shorten up code for the checkboxes.//
 
 
 			
-			$('.results').append('<p>').append("Once upon a time there was a Developer named" + name.toUppercase(); + ". " + name + " came to General Assembly to " + verbOne + " the great mountain of programming knowledge. '" + mission + "', " + name + " shouted. Though " + sentiment + " " + name + " was able to overcome all obstacles with the power of their " + noun + ". In the end, their success can be contributed entirely to their " + sentimentTwo + " " + nounTwo + ".");
+			$('.results').append('<p>').append("Once upon a time there was a Developer named " + name + ". " + name + " came to General Assembly to " + verbOne + " the great mountain of programming knowledge. '" + mission + "', " + name + " shouted. Though " + sentiment + " " + name + " was able to overcome all obstacles with the power of their " + noun + ". In the end, their success can be contributed entirely to their " + sentimentTwo + " " + nounTwo + ".");
 
 
 		    // Stop the form from submitting
