adds finished styles - thought can't digest what is happening with results box, having trouble tracing the thread of where it all starts, so many similarly named divs and classes.

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -11,11 +11,11 @@
 			<form class="form" method="GET">
 					<h1>My Dev Story</h1>
 					<div class="row formGroup">
-					    <label for="name">Name:</label>
+					    <label class="oneLine" for="name">Name:</label>
 					    <input id="name" name="name" >
 				    </div>
 					<div class="row formGroup">
-				    	<label for="verb-1">Verb:</label>
+				    	<label class="oneLine" for="verb-1">Verb:</label>
 				    	<select id="verb-1" name="verb-1">
 				    		<optgroup label="Cautious">
 					    		<option>consider</option>
@@ -35,12 +35,12 @@
 				    	</select>
 					</div>
 					<div class="row formGroup">
-				    	<label for="mission">Misison Statement:</label>
+				    	<label class="oneLine" for="mission">Misison Statement:</label>
 				    	<textarea id="mission" name="mission"></textarea>
 					</div>
 
 					<div class="row formGroup">
-						<label for="radioButtons">Sentiment:</label>
+						<label class="oneLine" for="radioButtons">Sentiment:</label>
 						<div class="radioButtons">
 							<div class="radio">
 							  <input id="radio1" type="radio" name="sentiment" value="dubious"> 
@@ -58,7 +58,7 @@
 					</div>
 					
 					<div class="row formGroup">
-				    	<label for="noun-1">Noun:</label>
+				    	<label class="oneLine" for="noun-1">Noun:</label>
 				    	<input id="noun-1" name="noun-1">
 					</div>
 					<div class="row formGroup">
@@ -81,11 +81,12 @@
 
 					</div>
 					<div class="row formGroup">
-				    	<label for="noun-2">Noun:</label>
+				    	<label class="oneLine" for="noun-2">Noun:</label>
 				    	<input id="noun-2" name="noun-2">
 					</div>
-					<div class="row formGroup">
-				    	<input type="submit">
+					<div class="row formGroup" id="wtf">
+				    	<input type="submit" id="subBut">
+
 				    </div>
 				    
 			    </div>
